# fixupxer-telegram-bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  download_images.py  fixupxer_bot.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cleaners/: __init__.py  base.py  preprocess.py  registry.py  service.py
cleaners/impl/: __init__.py  _base.py  amazon.py  facebook.py  general.py  google_search.py  instagram.py  linkedin.py  misc.py  reddit.py  substack.py  tiktok.py  twitter.py  youtube.py
tests/: test_bot_helpers.py  test_cleaners_engine.py  test_cleaners_json.py
tests/fixtures/: test-cases.json
