[project]
name = "fixupxer-tg-bot"
version = "0.3.0"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["venv", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = [
    "E501",   # line length handled separately when needed
    "B008",   # default arg call is fine for our small CLI shapes
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # tests deliberately import after sys.path tweaks

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
